# attendance-manager-api

./: .env  Cargo.toml  README.md  go.mod  main.go
migrations/2022-07-30-090610_create_table/: up.sql
src/: main.rs  schema.rs
src/configs/: mod.rs  openssl.rs  postgres.rs  repos.rs
src/models/: group.rs  lib.rs  mod.rs  user.rs
src/repos/: group.rs  lib.rs  mod.rs
src/routes/: group.rs  lib.rs  mod.rs  seed.rs  user.rs
src/utils/: request.rs
