[package]
name = "attendance-manager-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-web = { version = "4", features = ["openssl"] }
openssl-sys = "0.9"
openssl = "0.10"
actix-web-actors = "4.0.0"
deadpool-postgres = { version = "0.10.2", features = ["serde"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
chrono = "0.4"
r2d2 = "0.8.9"
log = "0.4"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.6"

[dependencies.uuid]
version = "1.1.2"
features = [ "v4" ]